--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -1,13 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 首页')"></head>
-<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
 <body>
-<div th:include="include :: f_header"></div>
-<!-- 搜索区域 -->
-<div class="search-section">
-    <div class="layui-container">
-        <div class="layui-row">
+<th:block th:include="include :: f_header"></th:block>
+<div class="layui-main">
+    <div class="layui-row">
+        <!-- 搜索区域 -->
+        <div class="search-section">
             <div class="layui-carousel" id="banner">
                 <div carousel-item>
                     <div th:each="top : ${tops}">
@@ -31,11 +30,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<!-- 热门课程 -->
-<div class="layui-container" style="margin-bottom: 40px;">
-    <div class="layui-row">
+        <!-- 热门课程 -->
         <div class="layui-col-md12">
             <div class="section-title">
                 <span>热门课程</span>
@@ -43,53 +38,53 @@
                    style="float: right;">更多课程</a>
             </div>
         </div>
-    </div>
-    <div class="rooms layui-row layui-col-space20">
-        <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}" th:data-room-id="${room.id}">
-            <div class="layui-card" style="border: 1px solid #EEEEEE">
-                <div class="layui-card-header" style="background: #E2E2E2; color: black;">
-                    <i class="layui-icon layui-icon-component"></i> <span th:text="${room?.title}">答题室标题</span>
-                    <span class="layui-badge" style="float: right; color: white;"
-                          th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
-                </div>
-                <div class="layui-card-body layui-row fixed-content-height">
-                    <div class="layui-col-md8">
-                        <div class="layui-row">
-                            <p class="content-area" th:text="${room?.content}">答题室内容</p>
-                            <div class="layui-col-xs12">
-                                <span class="layui-badge layui-bg-blue">标准答题</span>
-                                <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟
+        <div class="rooms layui-col-space20">
+            <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}" th:data-room-id="${room.id}">
+                <div class="layui-card" style="border: 1px solid #EEEEEE">
+                    <div class="layui-card-header" style="background: #E2E2E2; color: black;">
+                        <i class="layui-icon layui-icon-component"></i> <span th:text="${room?.title}">答题室标题</span>
+                        <span class="layui-badge" style="float: right; color: white;"
+                              th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
+                    </div>
+                    <div class="layui-card-body layui-row fixed-content-height">
+                        <div class="layui-col-md8">
+                            <div class="layui-row">
+                                <p class="content-area" th:text="${room?.content}">答题室内容</p>
+                                <div class="layui-col-xs12">
+                                    <span class="layui-badge layui-bg-blue">标准答题</span>
+                                    <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟
+                                </div>
+                                <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span>
+                                <span style="color: #666; margin: 5px 0 0 10px;">考试分类</span>
                             </div>
-                            <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span>
-                            <span style="color: #666; margin: 5px 0 0 10px;">考试分类</span>
                         </div>
-                    </div>
-                    <div class="layui-col-md4">
-                        <img src="/images/logo.png" style="height: 120px;padding: 8px;display: flex;"/>
-                    </div>
-                    <hr/>
-                    <div class="layui-row layui-col-space5" style="margin-top: 10px;">
-                        <div class="layui-col-xs6">
-                            <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
-                                <i class="layui-icon layui-icon-play"></i> 进入答题室
-                            </button>
+                        <div class="layui-col-md4">
+                            <img src="/images/logo.png" style="height: 120px;padding: 8px;display: flex;"/>
                         </div>
-                        <div class="layui-col-xs6">
-                            <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
-                                <i class="layui-icon layui-icon-file-b"></i> 报告
-                            </button>
+                        <hr/>
+                        <div class="layui-row layui-col-space5" style="margin-top: 10px;">
+                            <div class="layui-col-xs6">
+                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-purple">
+                                    <i class="layui-icon layui-icon-play"></i> 进入答题室
+                                </button>
+                            </div>
+                            <div class="layui-col-xs6">
+                                <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
+                                    <i class="layui-icon layui-icon-file-b"></i> 报告
+                                </button>
+                            </div>
                         </div>
+                        <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red"
+                                th:classappend="${role==5?'layui-hide':''}">
+                            <i class="layui-icon layui-icon-edit"></i> 阅卷
+                        </button>
                     </div>
-                    <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red"
-                            th:classappend="${role==5?'layui-hide':''}">
-                        <i class="layui-icon layui-icon-edit"></i> 阅卷
-                    </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- 底部信息 -->
-<div th:include="include :: f_footer"></div>
+<th:block th:include="include :: f_footer"></th:block>
 </body>
 </html>
