--- a/src/main/resources/templates/front/rooms.html
+++ b/src/main/resources/templates/front/rooms.html
@@ -1,9 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 首页')"></head>
-<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
 <body>
-<div th:include="include :: f_header"></div>
+<th:block th:include="include :: f_header"></th:block>
 <div class="layui-container layui-fluid">
     <div class="layui-row layui-card">
         <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
@@ -15,7 +14,6 @@
                     <span class="filter-tag" th:each="screen : ${screens}" th:data-pid="${screen.id}" th:text="${screen.name}">分类名</span>
                 </div>
             </div>
-
             <div class="layui-form-item">
                 <label class="layui-form-label">答卷模式：</label>
                 <div class="layui-input-block">
@@ -26,7 +24,6 @@
                     <span class="filter-tag" data-eid="3">只读学习模式</span>
                 </div>
             </div>
-
             <div class="layui-form-item">
                 <label class="layui-form-label">成绩类型：</label>
                 <div class="layui-input-block">
@@ -38,30 +35,28 @@
             </div>
         </div>
     </div>
-    <div class="layui-row layui-col-space20">
-        <div class="layui-col-md4 layui-col-sm6" th:each="room : ${rooms}">
-            <div class="layui-card" style="border: 1px solid #EEEEEE">
+    <div class="layui-row layui-card">
+        <div class="layui-col-md4 layui-col-sm6 layui-laydate-content" th:each="room : ${rooms}">
+            <div style="border: 1px solid #EEEEEE">
                 <div class="layui-card-header room-header">
                     <i class="layui-icon layui-icon-component"></i> <span th:text="${room?.title}">答题室标题</span>
                     <span class="layui-badge room-right" th:text="${room?.timeMode==1?'限时答题':'永久有效'}"></span>
                 </div>
-                <div class="layui-card-body layui-row fixed-content-height">
+                <div class="layui-card-body fixed-content-height">
                     <div class="layui-col-md8">
-                        <div class="layui-row">
-                            <p class="content-area" th:text="${room?.content}">答题室内容</p>
-                            <div class="layui-col-xs12">
-                                <span class="layui-badge layui-bg-blue">标准答题</span>
-                                <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟
-                            </div>
-                            <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span>
-                            <span style="color: #666; margin: 5px 0 0 10px;">考试分类</span>
+                        <p class="content-area" th:text="${room?.content}">答题室内容</p>
+                        <div class="layui-col-xs12">
+                            <span class="layui-badge layui-bg-blue">标准答题</span>
+                            <span class="layui-border-red" th:text="${room?.timeLen}">15</span>分钟
                         </div>
+                        <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span>
+                        <span style="color: #666; margin: 5px 0 0 10px;">考试分类</span>
                     </div>
                     <div class="layui-col-md4">
                         <img src="/images/logo.png" style="height: 120px;padding: 8px;display: flex;"/>
                     </div>
                     <hr/>
-                    <div class="layui-row layui-col-space5" style="margin-top: 10px;">
+                    <div class="layui-col-space5" style="margin-top: 10px;">
                         <div class="layui-col-xs6">
                             <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
                                 <i class="layui-icon layui-icon-edit"></i> 阅卷
@@ -80,14 +75,17 @@
             </div>
         </div>
     </div>
-    <div style="text-align: center" id="demo-laypage-theme"></div>
+    <div class="layui-row layui-card">
+        <!-- 分页 -->
+        <div id="pagination" class="laytable-cell-space layui-fluid"></div>
+    </div>
 </div>
 <!-- 底部信息 -->
-<div th:include="include :: f_footer"></div>
+<th:block th:include="include :: f_footer"></th:block>
 <script>
     layui.use(['jquery', 'element', 'form', 'laypage'], function ($, element, form, laypage) {
         $(function () {
-            layPage('demo-laypage-theme', "[[${count}]]")
+            layPage('pagination', "[[${count}]]")
             $('.filter-tag[data-pid]').removeClass('active').filter('[data-pid="[[${pid}]]"]').addClass('active');
             $('.filter-tag[data-eid]').removeClass('active').filter('[data-eid="[[${eid}]]"]').addClass('active');
             $('.filter-tag[data-mid]').removeClass('active').filter('[data-mid="[[${mid}]]"]').addClass('active');
