--- a/src/main/resources/templates/front/learns.html
+++ b/src/main/resources/templates/front/learns.html
@@ -17,10 +17,10 @@
             </div>
         </div>
         <div class="layui-col-space10">
-            <div class="layui-col-xs12 layui-col-sm8">
+            <div class="layui-col-xs12 layui-col-sm10 layui-col-md10">
                 <input type="text" name="title" class="layui-input" placeholder="搜索课程、知识库内容..."/>
             </div>
-            <div class="layui-col-xs12 layui-col-sm4">
+            <div class="layui-col-xs12 layui-col-sm2 layui-col-md2">
                 <div class="layui-row layui-col-space5">
                     <div class="layui-col-xs6">
                         <button class="layui-btn layui-btn-fluid layui-bg-purple" lay-submit lay-filter="search">
