--- a/src/main/resources/templates/front/comment.html
+++ b/src/main/resources/templates/front/comment.html
@@ -31,10 +31,10 @@
     <div class="layui-row layui-card">
         <div class="layui-col-xs12" style="padding: 15px 0; border-bottom: 1px solid #eee;" th:each="comment : ${comments}">
             <!-- 头像 -->
-            <div class="layui-col-xs1">
+            <div class="layui-col-md1 layui-col-sm1 layui-col-xs3">
                 <img src="/images/logo.png" alt="头像" style="width: 40px; height: 40px; border-radius: 50%;">
             </div>
-            <div class="layui-col-xs8">
+            <div class="layui-col-md11 layui-col-sm11 layui-col-xs9">
                 <div style="font-weight: bold;" th:text="${comment.username}">用户名</div>
                 <div style="color: #999; font-size: 12px;" th:text="${#dates.format(comment.ctime, 'yyyy-MM-dd HH:mm:ss')}">留言时间</div>
                 <div style="color: #666; font-size: 12px; margin-top: 5px;" th:text="${comment.content}">内容</div>
